Rename main file to index.js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "8ball",
     "version": "1.0.0",
     "description": "A simple discord bot.",
-    "main": "8ball.js",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
